--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,4 @@ parking_lot = "0.11.1"
 regex = "1.4.3"
 windows-permissions = "0.2.4"
 widestring = { version = "1.0.2", features = ["std"] }
+sunk = { path = "../sunk" }
